# steam-droid

./: .gitignore  JOURNAL-2026-04-19-boot-debug.md  JOURNAL-2026-04-19-m678.md  README.md  build.gradle  local.properties
apk-scaffold/: AndroidManifest.xml  SteamBackgroundService.kt  SteamClientBridge.kt  SteamMainActivity.kt  build.gradle
app/: build.gradle
app/src/androidTest/java/com/valve/steam/: SteamBridgeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  crashhandler_stub.cpp  steam_api_stub.cpp  steam_bridge.cpp
app/src/main/java/com/valve/steam/: SteamBackgroundService.kt  SteamBootReceiver.kt  SteamBridge.kt  SteamMainActivity.kt
app/src/main/res/values/: themes.xml
docs/: 01-manifest-analysis.md  02-android-binaries.md  03-ui-layer.md  04-architecture.md  05-missing-pieces.md  06-implementation-plan.md
research/: elf-inspector.py  findings.json  manifest-decoder.py
tools/: build-debug.ps1  fetch-valve-android-libs.ps1  stage-valve-android-libs.ps1  write-local-properties.ps1
